# TASD

./: .gitignore  README.md  TASD_reproduce_log_7B_3B.md  add_missing_quality.py  analyze_fly_vs_tasd.py  analyze_human_blind_review.py  analyze_intra_rater_reliability.py  analyze_low_accept_1_5b.py  analyze_score_validator_review.py  audit_gsd_stats.py  auto_human_quality_review.py  autoregressive_decode.py  check_data_consistency.py  diag_003_guard.py  diag_fly_mla_pld.py  diagnose_low_accept_1_5b.py  download_1.5b.py  download_models.sh  final_structure_coverage_scan.py  gen_unified_report.py  generate_benchmarks.py  generate_final_report.py  generate_fly_texts_for_blind_review.py  generate_fly_texts_score_validator.py  generate_paper_figures.py  gpu_utils.py  human_quality_review.py  llama_fly_official.py  llama_smoke_test.py  main.py  merge_ablation.py  prepare_blind_review.py  prepare_intra_rater_retest.py  prepare_score_validator.py  pyproject.toml  recompute_qwen_6x80_quality.py  recompute_qwen_6x80_tps.py  regenerate_ablation_report.py  regenerate_master_report.py  requirements.txt  (+47 more)
FLy/: .gitignore  pyproject.toml  start.sh
FLy/fly/: __init__.py  __main__.py  evaluator.py  evaluator_utils.py  utils.py
FLy/fly/api/: filter.py  metrics.py  model.py  registry.py  samplers.py  task.py
FLy/fly/caching/: cache.py
FLy/fly/filters/: __init__.py  custom.py  decontamination.py  extraction.py  selection.py  transformation.py
FLy/fly/loggers/: evaluation_tracker.py  utils.py  wandb_logger.py
FLy/fly/prompts/: __init__.py
FLy/fly/tasks/: __init__.py
FLy/fly_config/: FLy_Llama3_70b.json
data/: codesearchnet_argparse_blocks_80.jsonl  codesearchnet_argparse_blocks_80_summary.json  codesearchnet_dict_config_blocks_80.jsonl  codesearchnet_dict_config_blocks_80_summary.json  complex_nested_config_20.jsonl  complex_nested_config_20_summary.json  complex_nested_config_80.jsonl  complex_nested_config_80_summary.json  ml_config_blocks_openmmlab_80.jsonl  ml_config_blocks_openmmlab_80_summary.json  pipeline_stage_config_20.jsonl  pipeline_stage_config_20_summary.json  pipeline_stage_config_80.jsonl  pipeline_stage_config_80_summary.json  rich_cli_option_groups_20.jsonl  rich_cli_option_groups_20_summary.json  rich_cli_option_groups_80.jsonl  rich_cli_option_groups_80_summary.json
results/: ablation_full.json  ablation_openmmlab_config_20.json  ablation_real_python_argparse_20.json  ablation_real_python_dictconfig_20.json  ablation_summary.md  adaptive_policy_conclusion.md  adaptive_v1_detailed.json  adaptive_v1_summary.md  adaptive_v2_detailed.json  adaptive_v2_summary.md  all_methods_benchmark_aware_recoverability.json  all_methods_benchmark_aware_recoverability.md  all_methods_structural_recoverability.json  all_methods_structural_recoverability.md  ar_argparse_80.json  ar_complex_nested_config_80.json  ar_dict_config_80.json  ar_openmmlab_80.json  ar_pipeline_stage_config_80.json  ar_rich_cli_option_groups_80.json  benchmark_aware_recoverability_analysis.json  benchmark_aware_recoverability_analysis.md  benchmark_coverage_section_draft.md  benchmark_selection_protocol.md  comparison_4method_80.md  comparison_4method_80_data.json  comparison_5method_6x80.md  comparison_5method_6x80_data.json  comparison_5method_ngram_pilot.md  comparison_5method_ngram_pilot_data.json  consistency_check_guard_v15.md  d16_quality_sanity_check.md  data_consistency_check.md  diagnose_dictconfig_128_hard_cases.json  diagnose_dictconfig_128_hard_cases.md  diagnose_openmmlab_256_tasd.json  diagnose_openmmlab_256_tasd.md  draft_1.5B_dict_config_20.json  draft_1.5B_openmmlab_20.json  draft_1.5B_pipeline_stage_config_20.json  (+188 more)
src/: adaptive_policy.py  ar_decode.py  autoregressive_decode.py  br_rerun_policy.py  download_models.py  evaluator.py  gpu_utils.py  guard_v2.py  humaneval_bench.py  main.py  ngram_sd_decode.py  quality_driven_test.py  quality_metrics.py  quality_optimizer.py  risk_detector.py  speculative_decode.py  speed_bench.py  structural_guard.py  tasd_bench.py  tasd_calibrate.py  tasd_decode.py  tasd_integrated.py  (+4 more)
(+822 files in other folders)
