[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fly"
version = "0.1.0"
authors = [
    {name="Jinze Li"}
]
description = "FLy: Training-Free Loosely Speculative Decoding evaluation toolkit"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
license = { "text" = "MIT" }
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=2.16.0",
    "dill",
    "evaluate>=0.4.0",
    "huggingface_hub>=0.20.0",
    "jinja2>=3.1.0",
    "jsonlines",
    "more_itertools",
    "numpy",
    "numexpr",
    "packaging",
    "pandas",
    "peft>=0.4.0",
    "pybind11>=2.6.2",
    "pytablewriter",
    "pyyaml>=6.0",
    "rouge-score>=0.0.4",
    "sacrebleu>=1.5.0",
    "scikit-learn>=0.24.1",
    "sqlitedict",
    "torch>=2.1",
    "tqdm",
    "tqdm-multiprocess",
    "transformers>=4.45.0,<5",
    "word2number",
    "zstandard",
]

[tool.setuptools.packages.find]
include = ["fly*"]

# required to include yaml files in pip installation
[tool.setuptools.package-data]
fly = ["**/*.yaml", "tasks/**/*"]

[project.scripts]
fly = "fly.__main__:cli_evaluate"

[project.optional-dependencies]
acpbench = ["lark>=1.1.9", "tarski[clingo]==0.8.2", "pddl==0.4.2", "kstar-planner==1.4.2"]
api = ["requests", "aiohttp", "tenacity", "tqdm", "tiktoken"]
audiolm_qwen = ["librosa", "soundfile"]
dev = ["pytest", "pytest-cov", "pytest-xdist", "pre-commit", "requests", "aiohttp", "tenacity", "tqdm", "tiktoken", "sentencepiece", "ruff"]
gptq = ["auto-gptq[triton]>=0.6.0"]
gptqmodel = ["gptqmodel>=1.0.9"]
hf_transfer = ["hf_transfer"]
ibm_watsonx_ai = ["ibm_watsonx_ai>=1.1.22", "python-dotenv"]
ifeval = ["langdetect", "immutabledict", "nltk>=3.9.1"]
ipex = ["optimum"]
japanese_leaderboard = ["emoji==2.14.0", "neologdn==0.5.3", "fugashi[unidic-lite]", "rouge_score>=0.1.2"]
longbench=["jieba", "fuzzywuzzy", "rouge"]
libra=["pymorphy2"]
mamba = ["mamba_ssm", "causal-conv1d==1.0.2", "torch"]
math = ["sympy>=1.12", "antlr4-python3-runtime==4.11", "math_verify[antlr4_11_0]"]
multilingual = ["nagisa>=0.2.7", "jieba>=0.42.1", "pycountry"]
neuronx = ["optimum[neuronx]"]
optimum = ["optimum[openvino]"]
promptsource = ["promptsource>=0.2.3"]
ruler = ["nltk", "wonderwords", "scipy"]
sae_lens = ["sae_lens"]
sentencepiece = ["sentencepiece>=0.1.98"]
sparsify = ["sparsify"]
testing = ["pytest", "pytest-cov", "pytest-xdist"]
unitxt = ["unitxt==1.22.0"]
vllm = ["vllm>=0.4.2"]
wandb = ["wandb>=0.16.3", "pandas", "numpy"]
zeno = ["pandas", "zeno-client"]
tasks = [
    "fly[acpbench]",
    "fly[ifeval]",
    "fly[japanese_leaderboard]",
    "fly[longbench]",
    "fly[libra]",
    "fly[mamba]",
    "fly[math]",
    "fly[multilingual]",
    "fly[ruler]",
]

[tool.pymarkdown]
plugins.md013.enabled = false # line-length
plugins.md024.allow_different_nesting = true # no-duplicate-headers
plugins.md025.enabled = false # single-header
plugins.md028.enabled = false # no-blanks-blockquote
plugins.md029.allow_extended_start_values = true # ol-prefix
plugins.md034.enabled = false # no-bare-urls

[tool.ruff.lint]
extend-select = ["I", "W605"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["fly"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401","F402","F403"]
"utils.py" = ["F401"]

[dependency-groups]
dev = [
  "fly[api]",
  "fly[dev]",
  "fly[sentencepiece]"
]
